--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "node server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "author": "MaxCoder",
   "license": "MIT",
