--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "plusnews.bg",
   "main": "server.js",
   "engines": {
-    "node": "12.18.3"
+    "node": "12.18.3",
+    "npm": "7.8.0"
   },
   "scripts": {
     "server": "node server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "cd frontend && npm install && npm run build"
+    "heroku-postbuild": "cd ./frontend && npm install && npm run build"
   },
   "author": "MaxCoder",
   "license": "MIT",
