--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "7.8.0"
   },
   "scripts": {
-    "server": "node server.js",
+    "start": "node server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd ./frontend && npm install && npm run build"
